RESOLVED FIXED159875
Windows buildfix after r203338
https://bugs.webkit.org/show_bug.cgi?id=159875
Summary Windows buildfix after r203338
Csaba Osztrogonác
Reported 2016-07-18 04:17:27 PDT
...
Attachments
Patch (1.73 KB, patch)
2016-07-18 04:21 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-07-18 04:21:02 PDT
Created attachment 283898 [details] Patch speculative fix, let Windows EWS check it
Csaba Osztrogonác
Comment 2 2016-07-18 04:21:43 PDT
build log: c:\cygwin\home\buildbot\slave\win-release\build\source\webcore\dom\UserGestureIndicator.h(58): error C2872: 'Function': ambiguous symbol (compiling source file C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\bindings\js\JSBindingsAllInOne.cpp) [C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\DerivedSources\ForwardingHeaders\wtf/Function.h(33): note: could be 'WTF::Function' (compiling source file C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\bindings\js\JSBindingsAllInOne.cpp) c:\cygwin\home\buildbot\slave\win-release\build\webkitbuild\release\derivedsources\forwardingheaders\javascriptcore\PropertySlot.h(46): note: or 'JSC::Attribute Function' (compiling source file C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\bindings\js\JSBindingsAllInOne.cpp)
WebKit Commit Bot
Comment 3 2016-07-18 04:23:51 PDT
Attachment 283898 [details] did not pass style-queue: ERROR: Source/WebCore/dom/UserGestureIndicator.h:58: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/dom/UserGestureIndicator.h:70: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Csaba Osztrogonác
Comment 4 2016-07-18 05:42:43 PDT
Note You need to log in before you can comment on or make changes to this bug.