Windows buildfix after r203338 https://bugs.webkit.org/show_bug.cgi?id=159875

Unreviewed buildfix.

* dom/UserGestureIndicator.h:
(WebCore::UserGestureToken::addDestructionObserver):

Canonical link: https://commits.webkit.org/178035@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203346 268f45cc-cd09-0410-ab3c-d52691b4dbfc